--- a/ams-roles/tasks/main.yml
+++ b/ams-roles/tasks/main.yml
@@ -9,5 +9,8 @@
 - include_tasks: install_git.yml
 - include_tasks: clone_repo.yml
 
+- name: permissions
+  shell: cd /home/thinknyx/AMS/ams && chmod 777 oldamsstart.sh
+
 - name:  Executing shell script
   shell: /home/thinknyx/AMS/ams/oldamsstart.sh start 
